# Springboard

Capstone2/: LICENSE  Makefile  README.md  pyproject.toml
Capstone2/docs/: mkdocs.yml
Capstone2/docs/docs/: index.md
Capstone2/notebooks/: 01-etg-Initial-data-wrangling.ipynb
