[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Telco_Churn"
version = "0.0.1"
description = "My analysis of Telco_Churn"
authors = [
  { name = "Elliot G." },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["Telco_Churn"]
include = ["pyproject.toml", "Telco_Churn/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Telco_Churn"]
force-sort-within-sections = true

